--- a/src/table.html
+++ b/src/table.html
@@ -10,7 +10,7 @@
     <input id="date" type="date" value="">
     <input id="company" type="text" placeholder="Название компании" required>
     <input id="cost" type="text" placeholder="Стоимость акций" required>
-    <button onclick="addNewRow()">Добавить</button>
+    <button type="submit" onclick="addNewRow()">Добавить</button>
     <script>
         let currentDate = new Date();
         let year = currentDate.getFullYear();
